# miSha

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  gdb_build_run.sh  journal.md  out.txt
cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
include/: builtins.h  consts.h  env.h  executor.h  history.h  input.h  lexer.h  parser.h  pool.h
include/shell/: consts.h  env.h  executor.h  history.h  input.h  lexer.h  parser.h
src/: builtins.c  env.c  executor.c  hash_map.c  history.c  input.c  lexer.c  main.c  parser.c  pool.c  ring_buffer.c
src/shell/: builtins.c  env.c  executor.c  history.c  input.c  lexer-old.c  lexer.c  parser.c
test/: test_executor.c  test_input.c  test_lexer.c  test_parser.c
